--- a/src/components/ExpenseTable.css
+++ b/src/components/ExpenseTable.css
@@ -13,3 +13,17 @@
   align-items: center;
   gap: 1em;
 }
+
+.upload-icon {
+  width: 22px;
+  height: 22px;
+  vertical-align: middle;
+  transition: filter 0.2s;
+}
+
+.import-expenses-label {
+  font-size: 1em;
+  color: black;
+  margin-right: 0.5em;
+  font-weight: 500;
+}
